--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/muzalri/PERKASA_Laravel#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "perkasa_laravel": "file:"
   }
 }
