Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/algiptamvan_perkasa.yml
+++ b/.github/workflows/algiptamvan_perkasa.yml
@@ -46,7 +46,9 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -56,6 +58,13 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_A8E3CF72A6D8400DAEC4542D03F3C1BF }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_376C739095AA4CBFAE75B59388F37284 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_15264530AA1A48EC835C4E8F086474AA }}
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
@@ -63,4 +72,4 @@ jobs:
           app-name: 'Perkasa'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_38736FEA548B4CCCBCACA1445D19A77C }}
+          
