--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,9 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    php_value upload_max_filesize 60M
+    php_value post_max_size 60M
+    php_value memory_limit 256M
+    php_value max_execution_time 300
 </IfModule>
